--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
       </div>
       <div class="button">
         <a href="transfers.html"
-          ><img src="/images/20231029_171920.png" alt=""
+          ><img src="images/20231029_171920.png" alt=""
         /></a>
       </div>
       <div class="button">
         <a href="queens.html"
-          ><img src="/images/20231029_171426.png" alt=""
+          ><img src="images/20231029_171426.png" alt=""
         /></a>
       </div>
       <div class="button">
-        <a href="bus.html"><img src="/images/20231029_164813.png" alt="" /></a>
+        <a href="bus.html"><img src="images/20231029_164813.png" alt="" /></a>
       </div>
       <div class="button">
         <a href="safety.html"
@@ -50,42 +50,42 @@
       </div>
       <div class="button">
         <a href="waysofpaying.html"
-          ><img src="/images/20231029_171416.png" alt=""
+          ><img src="images/20231029_171416.png" alt=""
         /></a>
       </div>
       <div class="button">
         <a href="yellowisfortouch.html"
-          ><img src="/images/20231029_171200.png" alt=""
+          ><img src="images/20231029_171200.png" alt=""
         /></a>
       </div>
       <div class="button">
         <a href="sushi.html"
-          ><img src="/images/20231029_171107.png" alt=""
+          ><img src="images/20231029_171107.png" alt=""
         /></a>
       </div>
       <div class="button">
         <a href="pepboys.html"
-          ><img src="/images/20231029_172040.png" alt=""
+          ><img src="images/20231029_172040.png" alt=""
         /></a>
       </div>
       <div class="button">
         <a href="flowershop.html"
-          ><img src="/images/20231029_165552.png" alt=""
+          ><img src="images/20231029_165552.png" alt=""
         /></a>
       </div>
       <div class="button">
         <a href="stop.html"
-          ><img src="/images/Screenshot 2023-11-15 232216.png" alt=""
+          ><img src="images/Screenshot 2023-11-15 232216.png" alt=""
         /></a>
       </div>
       <div class="button">
         <a href="signsorsymbols.html"
-          ><img src="/images/Screenshot 2023-11-15 232222.png" alt=""
+          ><img src="images/Screenshot 2023-11-15 232222.png" alt=""
         /></a>
       </div>
       <div class="button">
         <a href="mapsandnavagation.html"
-          ><img src="/images/Screenshot_20231029_172342_Maps.png" alt=""
+          ><img src="images/Screenshot_20231029_172342_Maps.png" alt=""
         /></a>
       </div>
     </div>
